Bug 162725 - DOCX smart justify: missing shrinking in last paragraph line with multiple portions
Summary: DOCX smart justify: missing shrinking in last paragraph line with multiple po...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords:
Depends on:
Blocks: DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-08-31 13:13 UTC by László Németh
Modified: 2025-04-13 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (22.04 KB, application/vnd.oasis.opendocument.text-flat-xml)
2024-08-31 13:16 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-08-31 13:13:40 UTC
Description:
Likely a regression of Bug 162220 (removed code by accident which was only redundant for lines without multiple portions).

Steps to Reproduce:
1. open the attached test document

Actual Results:
no space shrinking: the line exceeds the paragraph width

Expected Results:
space shrinking: the line doesn't exceed the paragraph width


Reproducible: Always


User Profile Reset: No

Additional Info:
See Bug 119908.
Comment 1 László Németh 2024-08-31 13:16:50 UTC
Created attachment 196135 [details]
test document
Comment 2 Commit Notification 2024-09-02 21:33:48 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcadc9a6ec5be2541e259f0fa18022c0661c8df7

tdf#162725 sw smart justify: fix last line with multiple portions

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-03 06:32:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/95d8964748ec75d3e327dc2719e41a71b256a594

tdf#162725 sw smart justify: fix last line with multiple portions

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-03 09:41:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3c6b75db926dad28abbe6c8ccbf4a35b0ed61fde

tdf#162725 sw smart justify: fix last line with multiple portions

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.