tdf#162725 sw smart justify: fix last line with multiple portions

Fix last lines of paragraphs, which contains multiple portions,
and exceeded the width of the paragraph because of missing space
shrinking.

Follow-up to commit 6b857398a59d16308d6185d01e003e401439f060
"tdf#162109 sw smart justify: fix overhanging last line" and
commit 22eac3145ca62d15b47d95f4df60ce38d4f5aa46
"tdf#162220 sw smart justify: fix shrinking for single portion lines".

This reverts (and improves) the code removed in tdf#162220 (commit
22eac3145ca62d15b47d95f4df60ce38d4f5aa46), because that code
still needs for lines with multiple portions.

Change-Id: Id87d87defc79742513ceb0f90b83e6d4f0e4b271
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172692
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit bcadc9a6ec5be2541e259f0fa18022c0661c8df7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172755
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172784